--- a/skeleton_code/skeleton_code/VS2013_Solution/comp371lab1/COMP371Lab1.vcxproj
+++ b/skeleton_code/skeleton_code/VS2013_Solution/comp371lab1/COMP371Lab1.vcxproj
@@ -114,12 +114,20 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Grid.h" />
+    <ClInclude Include="Horse.h" />
+    <ClInclude Include="LightShader.h" />
+    <ClInclude Include="Shader.h" />
     <ClInclude Include="stb_image.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Grid.cpp" />
+    <ClCompile Include="Horse.cpp" />
     <ClCompile Include="Lab1.cpp" />
+    <ClCompile Include="LightShader.cpp" />
+    <ClCompile Include="Shader.cpp" />
     <ClCompile Include="stb_image.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
