--- a/skeleton_code/skeleton_code/VS2013_Solution/comp371lab1/COMP371Lab1.vcxproj
+++ b/skeleton_code/skeleton_code/VS2013_Solution/comp371lab1/COMP371Lab1.vcxproj
@@ -117,6 +117,7 @@
     <ClInclude Include="Axes.h" />
     <ClInclude Include="Grid.h" />
     <ClInclude Include="Horse.h" />
+    <ClInclude Include="Lamp.h" />
     <ClInclude Include="LightShader.h" />
     <ClInclude Include="NewGrid.h" />
     <ClInclude Include="Shader.h" />
@@ -128,6 +129,7 @@
     <ClCompile Include="Axes.cpp" />
     <ClCompile Include="Grid.cpp" />
     <ClCompile Include="Horse.cpp" />
+    <ClCompile Include="Lamp.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="LightShader.cpp" />
     <ClCompile Include="NewGrid.cpp" />
